Fix dependencies in package.xml files
Add missing dependencies. Use conditionals to handle multiple versions
of Ignition. Add XML schema for Catkin Package Format v3.

--- a/ign_ros_control_demos/package.xml
+++ b/ign_ros_control_demos/package.xml
@@ -1,12 +1,23 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>ign_ros_control_demos</name>
   <version>0.0.0</version>
   <description>Ignition ros_control package demos.</description>
   <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>
-  <author>Gennaro Raiola</author>
   <license>Apache 2</license>
+  <author>Gennaro Raiola</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
 
+  <exec_depend>effort_controllers</exec_depend>
+  <exec_depend>ign_ros_control</exec_depend>
+  <exec_depend>joint_state_controller</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>position_controllers</exec_depend>
+  <exec_depend>ros_ign_gazebo</exec_depend>
+  <exec_depend>velocity_controllers</exec_depend>
+  <exec_depend>xacro</exec_depend>
 </package>
