--- a/ign_ros_control/package.xml
+++ b/ign_ros_control/package.xml
@@ -1,20 +1,32 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>ign_ros_control</name>
   <version>0.0.0</version>
   <description>Ignition ros_control package allows to control simulated robots using ros_control framework.</description>
   <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>
-  <author>Gennaro Raiola</author>
   <license>Apache 2</license>
+  <author>Gennaro Raiola</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
 
-  <depend>ignition-common3</depend>
-  <depend>ignition-launch2</depend>
-  <depend>ignition-math6</depend>
-  <depend>ignition-msgs6</depend>
-  <depend>ignition-plugin1</depend>
-  <depend>ignition-transport9</depend>
+  <!-- Fortress -->
+  <depend condition="$IGNITION_VERSION == fortress">ignition-gazebo6</depend>
+  <depend condition="$IGNITION_VERSION == fortress">ignition-msgs8</depend>
+  <depend condition="$IGNITION_VERSION == edifice">ignition-transport11</depend>
+  <!-- Edifice -->
+  <depend condition="$IGNITION_VERSION == edifice">ignition-gazebo5</depend>
+  <depend condition="$IGNITION_VERSION == edifice">ignition-msgs7</depend>
+  <depend condition="$IGNITION_VERSION == edifice">ignition-transport10</depend>
+  <!-- Citadel (default) -->
+  <depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</depend>
+  <depend condition="$IGNITION_VERSION == citadel">ignition-msgs5</depend>
+  <depend condition="$IGNITION_VERSION == citadel">ignition-transport8</depend>
+  <depend condition="$IGNITION_VERSION == ''">ignition-gazebo3</depend>
+  <depend condition="$IGNITION_VERSION == ''">ignition-msgs5</depend>
+  <depend condition="$IGNITION_VERSION == ''">ignition-transport8</depend>
 
   <depend>roscpp</depend>
   <depend>pluginlib</depend>
@@ -24,6 +36,6 @@
   <depend>controller_manager</depend>
 
   <export>
-    <ign_ros_control plugin="${prefix}/ign_ros_control_plugins.xml"/>
+    <ign_ros_control plugin="${prefix}/ign_ros_control_plugins.xml" />
   </export>
 </package>
